# nauty

./: .gitlab-ci.yml  LICENSE  README.md
Nauty/: notes.txt
Nauty/native/: CMakeLists.txt  README.md  build.bat  core.c  dev_roanh_cpqindex_Nauty.c  header.bat
Nauty/native/include/: core.h  dev_roanh_cpqindex_Nauty.h
Nauty/native/nauty/: nausparse.c
Nauty/nauty/: README.md
Nauty/nauty/include/: nauty.h
Nauty/src/dev/roanh/nauty/: NaUtil.java  NauSparse.java  Nauty.java  SortTemplates.java
Nauty/src/dev/roanh/nauty/api/: NautyApi.java
Nauty/src/dev/roanh/nauty/ds/: MarkVal.java  NSet.java  Workspace.java
Nauty/src/dev/roanh/nauty/ptr/: IntPtr.java
Nauty/src/dev/roanh/nauty/struct/: DispatchVec.java  OptionBlk.java  SparseGraph.java  StatsBlk.java  TCNode.java
nauty/: .classpath  .gitattributes  .project  build.gradle  exclude.xml  notes.txt  settings.gradle
nauty/src/dev/roanh/nauty/: NaUtil.java  NauSparse.java  Nauty.java  SortTemplates.java
nauty/src/dev/roanh/nauty/api/: CanonicalResult.java  NautyApi.java
nauty/src/dev/roanh/nauty/ds/: IntPtr.java  MarkVal.java  NSet.java  Workspace.java
nauty/src/dev/roanh/nauty/struct/: SparseGraph.java  StatsBlk.java  TCNode.java
nauty/test/dev/roanh/nauty/: NautyTest.java
